# NeuralNet

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/mnist/: CMakeLists.txt  main.cpp
examples/mnist/mnist-master/include/mnist/: mnist_reader.hpp  mnist_reader_common.hpp  mnist_reader_less.hpp  mnist_utils.hpp
examples/noise_function/: CMakeLists.txt  analysis.ipynb  noise_function.cpp
examples/optimizer_compare/: CMakeLists.txt  analyze.ipynb  optimizer_compare.cpp
examples/test/: CMakeLists.txt  test.cpp
examples/xor/: CMakeLists.txt  xor.cpp
include/NeuralNet/: NeuralNet.h
include/NeuralNet/CostFunctions/: MSE_cost.h  absolute_cost.h  base_cost.h  cross_entropy_cost.h
include/NeuralNet/Initializers/: base_initializer.h  he_initializer.h  xavier_initializer.h
include/NeuralNet/Layers/: base_layer.h  base_trainable_layer.h  fully_connected_layer.h
include/NeuralNet/Layers/Activations/: base_activation.h  leaky_relu_activation.h  relu_activation.h  sigmoid_activation.h  softmax_activation.h  tanh_activation.h
include/NeuralNet/Loggers/: baser_logger.h  cout_logger.h  csv_logger.h
include/NeuralNet/Model/: base_network.h  inference_network.h  training_network.h
include/NeuralNet/Optimizers/: adam_optimizer.h  base_optimizer.h  grad_optimizer.h  momentum_optimizer.h  nesterov_optimizer.h  rmsprop_optimizer.h
include/NeuralNet/misc/: layer_type.h  math_util.h  network_builder.h  types.h
src/: NeuralNet.cpp
